# api/swagger.yaml
@@ -608,6 +608,249 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /prot/request:
+    post:
+      summary: Создание заявки
+      tags: [ Request ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Request'
+        responses:
+          '201':
+            description: Заявка успешно создана
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Request'
+          '422':
+            description: Некорректное тело запроса (invalid body)
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Error'
+          '409':
+            description: Конфликт при создании заявки
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Error'
+    get:
+      summary: Получить список заявок(с различными фильтрами)
+      tags: [ Request ]
+      parameters:
+        - name: owner_id
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int64
+        - name: service_id
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+        - name: status
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int16
+        - name: employee_id
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int64
+        - name: desired_at
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          description: Список заявок
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Request'
+        '400':
+          description: Неверные параметры фильтра
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Ошибка сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /prot/request/{id}:
+    get:
+      summary: Получить заявку по ID
+      tags: [ Request ]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+          example: 1
+      responses:
+        '200':
+          description: Заявка найдена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Request'
+        '400':
+          description: Некорректный ID
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Заявка с таким ID не найдена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    delete:
+      summary: Удалить заявку по ID
+      tags: [ Request ]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Заявка успешно удалена
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+        '400':
+          description: Некорректный ID
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '409':
+          description: Ошибка при удалении (например, заявка используется или конфликт)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /prot/request/{id}/employee:
+    patch:
+      summary: Изменить заявку по ID сотрудника
+      tags: [ Request ]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                employee_id:
+                  type: integer
+                  format: int64
+              required:
+                - employee_id
+      responses:
+        '200':
+          description: Сотрудник успешно обновлён
+          content:
+            application/json:
+              schema:
+                &ref: '#/components/schemas/Request'
+        '400':
+          description: Некорректный ID заявки или тело запроса
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "invalid request id"
+        '500':
+          description: Ошибка сервера при обновлении сотрудника
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /prot/request/{id}/status:
+    patch:
+      summary: Изменить заявку по статусу
+      tags: [ Request ]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: integer
+                  format: int32
+              required:
+                - status
+            example:
+              status: 2
+      responses:
+        '200':
+          description: Статус заявки успешно обновлён
+          content:
+            application/json:
+              schema:
+                &ref: '#/components/schemas/Request'
+        '400':
+          description: Некорректный ID заявки или тело запроса
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "invalid request id"
+        '500':
+          description: Ошибка сервера при обновлении статуса
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Error:
@@ -746,4 +989,49 @@ components:
           type: string
           nullable: true
           example: 2025-09-03T15:30:00Z
-        
+    Request:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        owner_id:
+          type: integer
+          format: int64
+          description: "ID пользователя-владельца (user)"
+          example: 77
+        user:
+          $ref: '#/components/schemas/User'
+        service_id:
+          type: integer
+          format: int64
+          example: 5
+        service:
+          $ref: '#/components/schemas/Service'
+        employee_id:
+          type: integer
+          format: int64
+          example: 11
+        employee:
+          $ref: '#/components/schemas/Employee'
+        status:
+          type: integer
+          format: int16
+          example: 2
+        desired_at:
+          type: string
+          format: date-time
+          example: "2025-09-12T10:00:00Z"
+        created_at:
+          type: string
+          format: date-time
+          example: "2025-09-01T09:00:00Z"
+        updated_at:
+          type: string
+          format: date-time
+          example: "2025-09-05T14:10:00Z"
+        closed_at:
+          type: string
+          format: date-time
+          example: "2025-09-05T14:10:00Z"
